HHH-15809 Secondary super-type cache pollution mitigations for HibernateBasicProxy