@@ -6,10 +6,6 @@
  */
 package org.hibernate.proxy.pojo.bytebuddy;
 
-import static net.bytebuddy.matcher.ElementMatchers.anyOf;
-import static net.bytebuddy.matcher.ElementMatchers.isDeclaredBy;
-import static net.bytebuddy.matcher.ElementMatchers.named;
-import static org.hibernate.engine.internal.ManagedTypeHelper.asHibernateProxy;
 import static org.hibernate.internal.CoreLogging.messageLogger;
 
 import java.io.Serializable;
@@ -23,15 +19,7 @@ import java.util.function.Function;
 
 import org.hibernate.HibernateException;
 import org.hibernate.bytecode.internal.bytebuddy.ByteBuddyState;
-import org.hibernate.engine.spi.CompositeOwner;
-import org.hibernate.engine.spi.CompositeTracker;
-import org.hibernate.engine.spi.Managed;
-import org.hibernate.engine.spi.ManagedComposite;
-import org.hibernate.engine.spi.ManagedEntity;
-import org.hibernate.engine.spi.ManagedMappedSuperclass;
-import org.hibernate.engine.spi.PersistentAttributeInterceptable;
 import org.hibernate.engine.spi.PrimeAmongSecondarySupertypes;
-import org.hibernate.engine.spi.SelfDirtinessTracker;
 import org.hibernate.internal.CoreMessageLogger;
 import org.hibernate.internal.util.ReflectHelper;
 import org.hibernate.proxy.HibernateProxy;
@@ -46,7 +34,6 @@ import net.bytebuddy.description.type.TypeDescription;
 import net.bytebuddy.description.type.TypeList;
 import net.bytebuddy.dynamic.DynamicType;
 import net.bytebuddy.dynamic.scaffold.subclass.ConstructorStrategy;
-import net.bytebuddy.implementation.DefaultMethodCall;
 import net.bytebuddy.implementation.SuperMethodCall;
 import net.bytebuddy.pool.TypePool;
 
@@ -129,9 +116,17 @@ public class ByteBuddyProxyHelper implements Serializable {
 					serializableProxy.getPersistentClass(),
 					serializableProxy.getInterfaces()
 			);
-			final HibernateProxy proxy = asHibernateProxy( proxyClass.newInstance() );
-			( (ProxyConfiguration) proxy ).$$_hibernate_set_interceptor( interceptor );
-			return proxy;
+			PrimeAmongSecondarySupertypes instance = (PrimeAmongSecondarySupertypes) proxyClass.getDeclaredConstructor().newInstance();
+			final ProxyConfiguration proxyConfiguration = instance.asProxyConfiguration();
+			if ( proxyConfiguration == null ) {
+				throw new HibernateException( "Produced proxy does not correctly implement ProxyConfiguration" );
+			}
+			proxyConfiguration.$$_hibernate_set_interceptor( interceptor );
+			final HibernateProxy hibernateProxy = instance.asHibernateProxy();
+			if ( hibernateProxy == null ) {
+				throw new HibernateException( "Produced proxy does not correctly implement HibernateProxy" );
+			}
+			return hibernateProxy;
 		}
 		catch (Throwable t) {
 			final String message = LOG.bytecodeEnhancementFailed( serializableProxy.getEntityName() );
